# come-follow-me-with-joshua-graham

./: .gitignore  .pre-commit-config.yaml  README.md  generate_show.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: linting.yml
assets/: background.xcf
generate_show/: __init__.py  __main__.py  ancient_tradition.py  audio.py  citation_index.py  curriculum.py  files.py  models.py  narration.py  prompt.py  scripture_proper_nouns.pls  scripture_reference.py  strongs.py  youtube.py
tests/: __init__.py  test_scripture_reference.py
